# arkwaifu-2x

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml
cmd/: main.go
internal/app/: app.go  fetch.go  submit.go  upscale.go
internal/app/api/: api.go  models.go
internal/app/dto/: dto.go
internal/app/log/: log.go
internal/app/sr/: models.go  real_cugan.go  real_esrgan.go  srmodel.go
internal/app/util/dirutil/: dirutil.go
internal/app/util/executil/: executil.go  path.go
internal/app/util/fileutil/: files.go
internal/app/util/pathutil/: ext.go
internal/app/verify/: verify.go
internal/app/vips/: webp.go
src/arkwaifu_2x/: __init__.py  app.py
src/arkwaifu_2x/arkwaifu/: __init__.py  models.py
src/arkwaifu_2x/real_esrgan/: __init__.py
tools/realcugan-ncnn-vulkan-20220318-windows/: README.md
tools/realesrgan-ncnn-vulkan-20211212-windows/: README_windows.md
tools/vips-dev-8.12/: README.md
