[tool.poetry]
name = "arkwaifu-2x"
version = "0.1.0"
description = "CLI management tool for Arkwaifu."
authors = ["Flandia Yingman <flandia_yingm@hotmail.com>"]
readme = "README.md"
packages = [{include = "arkwaifu_2x"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
inquirer = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
